[gd_scene load_steps=6 format=3 uid="uid://bvr0ym8gc1kes"]

[ext_resource type="Script" uid="uid://tdodfx4ilhfy" path="res://living_stuff/enemy_two.gd" id="1_7eptd"]
[ext_resource type="PackedScene" uid="uid://b1toamioeteuc" path="res://living_stuff/bullet.tscn" id="2_3kih0"]
[ext_resource type="Texture2D" uid="uid://43amorwh4brn" path="res://icon.svg" id="3_1ruxc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_soq00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1ruxc")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1ruxc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1ruxc")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(21.75, 2.75)

[node name="Enemy" type="Area2D" groups=["mobs"]]
scale = Vector2(0.5, 0.5)
collision_layer = 6
collision_mask = 5
script = ExtResource("1_7eptd")
bullet_scene = ExtResource("2_3kih0")
bullet_chance = 0.2

[node name="StartMoving" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -84)
rect = Rect2(-50, 32, 98, 12)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -28)
sprite_frames = SubResource("SpriteFrames_soq00")
animation = &"shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 53)
scale = Vector2(8, 8)
shape = SubResource("RectangleShape2D_4gyqm")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="StartMoving" to="." method="_on_start_moving_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
